Changed method names.

--- a/examples/2d.html
+++ b/examples/2d.html
@@ -24,7 +24,7 @@
       }
 
       /* Delaunay triangulate the vertices. */
-      triangles = Delaunay.triangulate(2, matrix);
+      triangles = Delaunay.triangulateMatrix(2, matrix);
 
       /* Draw the triangles. */
       ctx.strokeStyle = "black";
