--- a/examples/3d.html
+++ b/examples/3d.html
@@ -2,12 +2,17 @@
 <html>
   <head>
     <title>3D Delaunay Triangulation Example</title>
+    <meta charset="utf-8"/>
   </head>
 
   <body>
     <canvas id="canvas" width="256" height="256">
     </canvas>
 
+    <script type="text/javascript" src="../lib/matrix.js">
+    </script>
+    <script type="text/javascript" src="../lib/barycentric.js">
+    </script>
     <script type="text/javascript" src="../lib/delaunay.js">
     </script>
 
